[tool.poetry]
name = "subway-location-tracker-ui"
version = "0.1.0"
description = ""
authors = ["LIM SHENG XUE <limshengxue0820@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.43.2"
streamlit-folium = "^0.24.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
